--- a/02-naming/1-improve_naming/build.gradle
+++ b/02-naming/1-improve_naming/build.gradle
@@ -12,6 +12,7 @@ dependencies {
     implementation 'com.vlkan.log4j2:log4j2-logstash-layout:1.0.5'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.12.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
 
