--- a/args-default_values/ts/1-with_default_args/package.json
+++ b/args-default_values/ts/1-with_default_args/package.json
@@ -1,29 +1,26 @@
 {
-	"name": "typescript-basic-skeleton",
-	"version": "2.0.0",
-	"description": "Bootstrap your new TypeScript project with the bare minimum dependencies",
-	"scripts": {
-		"lint": "eslint .",
-		"lint:fix": "eslint . --fix",
-		"test": "jest"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/CodelyTV/typescript-basic-skeleton.git"
-	},
-	"author": "codelytv",
-	"license": "MIT",
-	"bugs": {
-		"url": "https://github.com/CodelyTV/typescript-basic-skeleton/issues"
-	},
-	"homepage": "https://github.com/CodelyTV/typescript-basic-skeleton#readme",
-	"devDependencies": {
-		"@swc/core": "1.3.92",
-		"@swc/jest": "0.2.29",
-		"@types/jest": "^29.5.12",
-		"eslint": "^9.9.1",
-		"eslint-config-codely": "^4.2.0",
-		"jest": "^29.7.0",
-		"typescript": "^5.5.4"
-	}
+  "name": "codely",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.2.7"
+  },
+  "devDependencies": {
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.7"
+  }
 }
