--- a/args-default_values/ts/1-with_default_args/package.json
+++ b/args-default_values/ts/1-with_default_args/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "test": "playwright test"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.2.7",
+    "@playwright/test": "^1.46.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
